manifests/wildcard/second-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-ingress-second
  namespace: tensure
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/duration: "5m"          # Certificate will expire in 5 minutes
    cert-manager.io/renew-before: "2m" 
    cert-manager.io/renew-reason: "force-renewal"
    # external-dns.alpha.kubernetes.io/force-replace: "true"
    # external-dns.alpha.kubernetes.io/hostname: ${DNS_NAME}
    cert-manager.io/cluster-issuer: tensure-issuer
spec:
  tls:
  - hosts:
      - app3.ioinfo.shop
      - app4.ioinfo.shop
    secretName: wildcard-cert-secret-second
  rules:
  - host: app3.ioinfo.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app-service
            port:
              number: 80
  - host: app4.ioinfo.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: second-app-service
            port:
              number: 80
